--- a/src/Debug/html/css/index.css
+++ b/src/Debug/html/css/index.css
@@ -1,6 +1,6 @@
 #title {
     width: 100%;
-    font-size: 30px;
+    font-size: 26px;
     background-color: rgb(69, 200, 220);
     line-height: 68px;
     text-align: center;
@@ -12,6 +12,20 @@
     display: flex;
     flex-direction: row;
     height: 600px;
+}
+
+.verticalSep{
+    margin-left: 2px;
+    border: 1px dashed #eee;
+    width: 2px;
+    top: 0;bottom:0
+}
+
+.hSep{
+    margin-left: 2px;
+    border: 1px dashed #eee;
+    height: 2px;
+    left: 0;right:0
 }
 
 .workingSection{
